--- a/scenario1.html
+++ b/scenario1.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+
   <!-- Site Properities -->
   <title>AXA | Assurance Auto</title>
 
+  <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="images/favicon.ico">
+
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
-  <link rel="stylesheet" type="text/css" href="css/homepage.css">
   <link rel="stylesheet" type="text/css" href="css/scenario1.css">
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
@@ -233,7 +235,7 @@
           </h4>
           <p>Indemnisation des préjudices corporels du conducteur</p>
 
-          
+
 
           <div class="ui three cards">
             <div class="ui card">
