--- a/scenario1.html
+++ b/scenario1.html
@@ -757,7 +757,7 @@ Nous prenons en charge l’organisation et les frais de taxi, train ou avion pou
 <!-- FIN DE GARANTIES -->
 
 <!-- AVANTAGES -->
-<div id="avantages" class="ui vertical segment">
+<div id="avantages" class="ui vertical segment passedFooter">
 
 <!-- grid structure -->
   <div class="ui page relaxed grid">
