--- a/scenario1.html
+++ b/scenario1.html
@@ -186,8 +186,9 @@
         </div>
         <div class="ten wide column garantie_content_col">
           <h4>Responsabilité civile
-            <img src="images/information_colored.svg" class="iconInfo pop" data-variation="basic inverted" data-offset="115" data-position="top center" >
-            <div class="ui fluid popup transition hidden">
+            <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted"  data-position="top center" >
+            <!-- <img src="images/information_colored.svg" class="iconInfo pop" data-variation="basic inverted" data-offset="115" data-position="top center" > -->
+            <div class="ui popup transition hidden">
               Cette garantie prend en charge les dommages que le conducteur de votre véhicule pourrait  causer aux autres lors d’un accident de la circulation dont il est responsable. Ainsi seront indemnisés :
               <ul>
                 <li>les personnes blessées ou tuées (les passagers de votre véhicule, les conducteurs et passagers des autres véhicules, les piétons ou cyclistes)</li>
@@ -195,6 +196,14 @@
               </ul>
               En revanche, vos propres dommages (corporels ou matériels) ne sont jamais pris en charge par cette garantie.
             </div>
+            <!-- <div class="ui fluid popup transition hidden">
+              Cette garantie prend en charge les dommages que le conducteur de votre véhicule pourrait  causer aux autres lors d’un accident de la circulation dont il est responsable. Ainsi seront indemnisés :
+              <ul>
+                <li>les personnes blessées ou tuées (les passagers de votre véhicule, les conducteurs et passagers des autres véhicules, les piétons ou cyclistes)</li>
+                <li>les dégâts matériels causés aux autres (véhicules, façades etc…)</li>
+              </ul>
+              En revanche, vos propres dommages (corporels ou matériels) ne sont jamais pris en charge par cette garantie.
+            </div> -->
           </h4>
           <p>Prise en charge des dommages que vous causez aux autres avec votre véhicule</p>
           <h4>Défense Pénale et Recours suite à Accident
