update scenario 1 + 1bis + 3

--- a/scenario3_etape2_01_tiers.html
+++ b/scenario3_etape2_01_tiers.html
@@ -69,7 +69,7 @@
     </div>
 
 <!-- GARANTIES -->
-<div id="garanties" class="garanties extended">
+<div id="garanties" class="garanties extended personnalisation">
   <div class="ui vertical segment">
     <div class="ui page grid">
 
@@ -139,10 +139,10 @@
                       <tbody>
                         <tr>
                           <td>
-                            <div class="ui radio checkbox">
-                              <input type="radio" name="groupConducteur">
+                            <div class="ui radio checkbox checked">
+                              <input type="radio" name="groupConducteur" checked="checked">
                               <label class="textLabel">Jusqu’à<br> 250 000 €</label>
-                              <div class="ui label">INCLUS</div>
+                              <div class="ui label garantieConducteurN1" data-content="0">INCLUS</div>
                             </div>
                           </td>
                           <td>
@@ -150,14 +150,14 @@
                               <input type="radio" name="groupConducteur">
                               <label class="textLabel">Jusqu’à<br> 500 000 €</label>
                               <img src="images/recommandation_badge.svg" class="icon-recommandation icon recommandation"></i>
-                              <div class="ui label">29 € /an</div>
+                              <div class="ui label" data-content="29">29 € /an</div>
                             </div>
                           </td>
                           <td>
                             <div class="ui radio checkbox">
                             <input type="radio" name="groupConducteur">
                             <label>Jusqu’à<br>1 000 000 €</label>
-                            <div class="ui label">70 € /an</div>
+                            <div class="ui label" data-content="70">70 € /an</div>
                           </div>
                           </td>
                         </tr>
@@ -375,9 +375,9 @@
       <!-- CTA -->
 
       <div id="cta" class="sixteen wide center aligned column">
-        <a href="scenario3_etape3_02_tiers_etendu.html#garanties">
+        <a href="scenario3_etape3_01_tiers.html#garanties">
         <button class="big ui green button cta">
-          Choisir mes garanties complémentaires  <i class="chevron right icon"></i>
+          VALIDER ET CHOISIR MES GARANTIES COMPLEMENTAIRES  <i class="chevron right icon"></i>
         </button>
         </a>
       </div>
