--- a/scenario3_etape3_03_tous_risques.html
+++ b/scenario3_etape3_03_tous_risques.html
@@ -64,7 +64,7 @@
             <div class="ui large inverted breadcrumb">
               <div class="section link"><a href="scenario3.html"><span>Choisissez<br>votre formule</span></a></div>
               <i class="right chevron icon divider"></i>
-              <div class="section link"><a href="scenario3_etape2_02_tiers_etendu.html#garanties"><span>Personnalisez<br>votre formule</span></a></div>
+              <div class="section link"><a href="scenario3_etape2_03_tous_risques.html#garanties"><span>Personnalisez<br>votre formule</span></a></div>
               <i class="right chevron icon divider"></i>
               <div class="active section"><span>Choississez vos<br>garanties complémentaires</span></div>
             </div>
@@ -93,15 +93,26 @@
 
 
 
+      <div class="one wide column">
+        <!-- carte garantie -->
+
+          <div class="ui fluid card">
+            <div class="header centerTitle"><h3>TIERS<br>ÉTENDU</h3>
+            </div>
+          </div>
+
+        <!-- fin de carte -->
+      </div>
+
 
       <div class="fourteen wide column">
 
 
         <!-- carte garantie -->
         <div class="ui fluid card">
-          <div class="header"><h3>TIERS ÉTENDU</h3>
+          <div class="header"><h3>TOUS RISQUES</h3>
             <div class="labelWrapper">
-              Votre tarif personnalisé :  <div class="ui label">309 € /an</div>
+              Votre tarif personnalisé :  <div class="ui label">449 € /an</div>
             </div>
           </div>
 
@@ -152,6 +163,28 @@
                       </tbody>
                     </table>
                   </td>
+                </tr>
+                <tr>
+                  <td>
+                    <h4 class="ui image header">
+                      <i class="icon-check icon"></i>
+                      <div class="content">
+                        Prêt de volant <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
+                        <div class="ui popup transition hidden" >
+                          Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule
+                        </div>
+                      </div>
+                    </h4>
+                  </td>
+                  <td class="checkboxSimple">
+                    <div class="ui checkbox">
+                      <input type="checkbox" name="pretVolant">
+                      <label>Prêt de volant à tout conducteur de plus de 3 ans de permis,<br> ainsi qu'à vos enfants</label>
+                      <div class="ui label wide">112 € /an</div>
+                    </div>
+
+                  </td>
+                </tr>
                   <tr>
                     <td>
                       <h4 class="ui image header">
@@ -314,21 +347,12 @@
       </div>
 
 
-      <div class="one wide column">
-        <!-- carte garantie -->
-
-          <div class="ui fluid card">
-            <div class="header centerTitle"><h3>TOUS<br>RISQUES</h3>
-            </div>
-          </div>
-
-        <!-- fin de carte -->
-      </div>
 
 
     </div>
 
     <!-- legende -->
+    <div class="one wide column"></div>
     <div class="one wide column"></div>
     <div class="fourteen wide column legende">
       <img src="images/recommandation_badge.svg"><p>Formule recommandée par AXA en fonction de votre profil </p>
