update scenario 3 tiers etape 2

--- a/scenario3_etape2_01_tiers.html
+++ b/scenario3_etape2_01_tiers.html
@@ -255,21 +255,21 @@
               </tr>
               <tr>
                 <td>
-                  <h4 class="ui image disabled header">
+                  <h4 class="ui image header">
                     <i class="icon-check icon"></i>
                   </h4>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <h4 class="ui image disabled header">
+                  <h4 class="ui image header">
                     <i class="icon-check icon"></i>
                   </h4>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <h4 class="ui image disabled header">
+                  <h4 class="ui image header">
                     <i class="icon-check icon"></i>
                   </h4>
                 </td>
