correct cta text scenario 3

--- a/scenario3_etape2_01_tiers.html
+++ b/scenario3_etape2_01_tiers.html
@@ -377,7 +377,7 @@
       <div id="cta" class="sixteen wide center aligned column">
         <a href="scenario3_etape3_01_tiers.html#garanties">
         <button class="big ui green button cta">
-          VALIDER ET CHOISIR MES GARANTIES COMPLEMENTAIRES  <i class="chevron right icon"></i>
+          VALIDER ET CHOISIR MES GARANTIES COMPLÉMENTAIRES  <i class="chevron right icon"></i>
         </button>
         </a>
       </div>
