--- a/scenario5.html
+++ b/scenario5.html
@@ -177,7 +177,7 @@
             </tr>
             <tr>
               <td>
-                <h4>Joker <span>(sans antécédent -30 ans)</span>
+                <h4>Joker <span>pour le moins de 30 ans</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     5 retours en taxi offerts /an en cas d'incapacité de conduite
@@ -254,7 +254,7 @@
             </tr>
             <tr>
               <td>
-                <h4>Catastrophes Naturelles
+                <h4>Catastrophes naturelles
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle déclarée par arrêté ministériel au Journal Officiel.
@@ -302,7 +302,7 @@
                 <h4>Bris de pare-brise
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
+                    Nous prenons en charge les frais de réparation ou de remplacement de votre pare-brise.
                   </div>
                 </h4>
               </td>
@@ -332,7 +332,7 @@
                 <h4>Valeur à neuf 12 mois
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    ?
+                    Si votre véhicule est volé ou détruit au cours des 12 mois suivants la date de sa première mise en circulation, nous vous indemnisons sur la bases de la valeur d’achat du véhicule (prix d’acquisition figurant sur la facture), déduction faite de l’éventuelle franchise.
                   </div>
 
                 </h4>
@@ -484,7 +484,7 @@
                 <h4>Prêt de véhicule<br>(garage/domicile)
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule.
+                    En cas d’accident, une voiture de remplacement est mise à votre disposition chez vous ou dans nos Garages Services. 
                   </div>
                 </h4>
               </td>
