--- a/scenario5.html
+++ b/scenario5.html
@@ -177,7 +177,7 @@
             </tr>
             <tr>
               <td>
-                <h4>Joker <span>pour le moins de 30 ans</span>
+                <h4>Joker <span>pour les moins de 30 ans</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     5 retours en taxi offerts /an en cas d'incapacité de conduite
@@ -484,7 +484,7 @@
                 <h4>Prêt de véhicule<br>(garage/domicile)
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    En cas d’accident, une voiture de remplacement est mise à votre disposition chez vous ou dans nos Garages Services. 
+                    En cas d’accident, une voiture de remplacement est mise à votre disposition chez vous ou dans nos Garages Services.
                   </div>
                 </h4>
               </td>
